# PNUDH_AutoResearchClaw

./: .gitignore  CLAUDE.md  README.md  config.autoresearch.yaml  config.orthodontic-ai-survey.yaml  config.researchclaw.example.yaml  config.test.yaml  pyproject.toml
.claude/: settings.local.json
.claude/skills/data-analysis/: SKILL.md
.claude/skills/intake/: SKILL.md
.claude/skills/literature/: SKILL.md
autoresearch/: __init__.py  cli.py  pipeline.py  session.py  workspace.py
autoresearch/stages/: __init__.py  data_analysis.py  literature.py  proofreader.py  review.py  revision.py  visualization.py  writing.py
autoresearch/web/: server.py
docs/: README_AR.md  README_CN.md  README_DE.md  README_ES.md  README_FR.md  README_JA.md  README_KO.md  README_PT.md  README_RU.md  integration-guide.md  iteration_plan_v8.md
outputs/: CLAUDE.md  SKILL.md  decisions.md  pipeline_design.md  reviewer_personas.md
researchclaw/: cli.py  config.py  evolution.py  health.py  prompts.py
researchclaw/data/: __init__.py
researchclaw/docker/: Dockerfile
researchclaw/experiment/: docker_sandbox.py  sandbox.py  validator.py  visualize.py
researchclaw/literature/: arxiv_client.py  cache.py  models.py  novelty.py  search.py  semantic_scholar.py  verify.py
researchclaw/llm/: __init__.py  client.py
researchclaw/pipeline/: _helpers.py  contracts.py  executor.py  opencode_bridge.py  runner.py  stages.py
researchclaw/templates/: conference.py  converter.py
sessions/20260406-074656-0230a2/: session.json
sessions/20260406-075510-757ab1/: session.json
tests/: test_entry_point_validation.py  test_rc_cache.py  test_rc_checkpoint.py  test_rc_citation_verify.py  test_rc_cli.py  test_rc_docker_sandbox.py  test_rc_e2e_regression.py  test_rc_executor.py  test_rc_health.py  test_rc_literature.py  test_rc_llm.py  test_rc_runner.py  test_rc_templates.py
(+30 files in other folders)
